[gd_scene load_steps=11 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://RockBG.png" type="Texture" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://HOMOARAK.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://UkuleleSong.wav" type="AudioStream" id=5]
[ext_resource path="res://Coin01.wav" type="AudioStream" id=6]
[ext_resource path="res://Bomb-SoundBible.com-891110113.wav" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 38
font_data = ExtResource( 4 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://HOMOARAK.TTF"

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = SubResource( 2 )

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 510.5, 300 )
scale = Vector2( 4.27083, 3.7625 )
texture = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 204, 326 )

[node name="CoinSpawner" type="Timer" parent="."]

[node name="BombSpawner" type="Timer" parent="."]

[node name="UI" type="CanvasLayer" parent="."]
editor/display_folded = true

[node name="GameOver" type="Label" parent="UI"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 0.902466
margin_top = 258.115
margin_right = 0.902466
margin_bottom = 299.115
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0.929412, 1, 1 )
text = "OH NO! THIS IS NOT WHAT I ORDERED!"
align = 1
valign = 2
autowrap = true
clip_text = true

[node name="Score" type="Label" parent="UI"]
margin_top = -1.0
margin_right = 1023.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0.937255, 0, 1 )
text = "Score: 0"
align = 1
valign = 1

[node name="Score2" type="Label" parent="UI"]
margin_left = 0.698303
margin_top = 0.396652
margin_right = 1023.7
margin_bottom = 48.3967
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0.972549, 0.529412, 1 )
align = 1
valign = 1

[node name="BackgroundSong" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
autoplay = true

[node name="CoinGrab" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
autoplay = true

[node name="BombHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
autoplay = true
[connection signal="timeout" from="CoinSpawner" to="." method="_on_CoinSpawner_timeout"]
[connection signal="timeout" from="BombSpawner" to="." method="_on_BombSpawner_timeout"]
